# Rheinwerk_GenerativeKImitPython

./: .gitignore  README.md  pyproject.toml
.cursor/commands/: newtask.md
scripts/: chain_structured_output.py  index.html  model_chat_groq.py  model_chat_ollama.py  model_chat_openai.py  multimodal_groq.py  parallel_chain.py  simple_chain.py
scripts/coding_agents/: index.html
scripts/coding_agents/ai_docs/tasks/: chat_avatar_modal_task.md  integrate_chat_backend_api_task.md
scripts/coding_agents/ai_docs/templates/: api_description.md
scripts/table_rag/: app.py
scripts/vector_db/: create_embeddings.py  data_chunking.py  data_ingestion_pipeline.py  data_loading_all_files_in_dir.py  data_loading_dir_w_mult_types.py  data_loading_single_file.py  db_query.py  prompt_hub.py  rag.py
scripts/vector_db/agents/: ag2_conversation.py
unsere_skripte/: chat_openrouter.ipynb  chat_openrouter.py
