[project]
name = "rheinwerk-generativekimitpython"
version = "0.1.0"
description = "Unsere Umgebung für das Online-Seminar von Rheinwerk"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ag2>=0.10.0",
    "chromadb>=1.3.4",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "plotly>=6.4.0",
    "plotly-express>=0.4.1",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
]
